print preview css: fix labels
change from

input
label

to

label
  input
  span
/label

This is better because there are no blank spaces that are unclickable (the offsetting start padding and margin was attempting to get around this). Also we need it to be consistent with settings so we can make css rules that apply to both equally well.

I removed aria-hidden attributes because those divs /should/ be using display:none when not visible. aria-hidden fixes it for screen readers but not for tab order.

BUG=103688
TEST=manual


Review URL: http://codereview.chromium.org/8566025

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@110037 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: ae5c22487f149015bc9055733f3159cb02f7a069

--- a/chrome/browser/resources/print_preview/print_preview.css
+++ b/chrome/browser/resources/print_preview/print_preview.css
@@ -54,7 +54,7 @@ header {
   padding-top: 2px;
 }
 
-input[disabled] + label,
+label input[disabled] + span,
 input[type=text][disabled] {
   color: gray;
 }
@@ -188,10 +188,7 @@ select {
 }
 
 label {
-  -webkit-margin-start: -5px;
-  -webkit-padding-start: 5px;
   -webkit-user-select: none;
-  cursor: default;
 }
 
 .hidden-section {
@@ -238,11 +235,6 @@ label {
   display: -webkit-box;
 }
 
-#print-pages-div > label {
-  -webkit-box-flex: 1;
-  display: -webkit-box;
-}
-
 #individual-pages {
   -webkit-box-flex: 1;
   -webkit-margin-start: 5px;
@@ -251,7 +243,7 @@ label {
 
 #collate-option {
  -webkit-transition: opacity 200ms, -webkit-transform 200ms;
- -webkit-padding-start: 5px;
+ -webkit-padding-start: 16px;
  display: inline-block;
  opacity: 1;
 }
@@ -406,7 +398,8 @@ html[dir='rtl'] #decrement {
   -webkit-animation-delay: 300ms;
 }
 
-#two-sided-div {
+#two-sided-option {
+  display: inline-block;
   margin-top: 10px;
 }
 
